[tool.poetry]
name = "WiDiTApp"
version = "0.1.4"
description = "An app to use the WiDiT model."
authors = ["Robert Turnbull"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/rbturnbull/WiDiTApp/"
documentation = "https://rbturnbull.github.io/WiDiTApp"
homepage = "https://github.com/rbturnbull/WiDiTApp/"
keywords = ["torchapp", "pytorch", "deep learning", "command-line interface"]
# For classifiers see https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
cluey = ">=0.1.0"
WiDiT = {git = "git@github.com:rbturnbull/WiDiT.git", branch="main"}
diffusers = ">=0.35.1"
accelerate = ">=1.10.1"
pandas = ">=2.3.2"
wandb = ">=0.21.4"


[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
ipykernel = ">=6.6.1"
coverage = ">=5.5"
autopep8 = ">=1.5.7"
Sphinx = ">=4.2.0"
nbsphinx = ">=0.8.7"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autobuild = ">=2021.3.14"
myst-parser = ">=0.15.2"
pre-commit = ">=2.15.0"
sphinx-copybutton = ">=0.4.0"
black = ">=21.10b0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

